[gd_scene load_steps=19 format=4 uid="uid://cvxjd4w2swjqs"]

[ext_resource type="Script" uid="uid://qxgbuq88jayy" path="res://scenes/level.gd" id="1_rid8s"]
[ext_resource type="Texture2D" uid="uid://cdwtr7gry2twa" path="res://sprites/bg_16.png" id="2_aa7qc"]
[ext_resource type="PackedScene" uid="uid://bp23a3x1ayyfm" path="res://scenes/objects/collision_blocks.tscn" id="2_ppuw4"]
[ext_resource type="Texture2D" uid="uid://banqxbdmhfaoc" path="res://sprites/bg_build_mode.png" id="3_bt0cm"]
[ext_resource type="Texture2D" uid="uid://c31bq8jr5mcex" path="res://sprites/bg_8.png" id="4_4sq44"]
[ext_resource type="Texture2D" uid="uid://5yd87obchntd" path="res://sprites/menu.png" id="6_e0la5"]
[ext_resource type="Texture2D" uid="uid://c5nn8675u3k6q" path="res://sprites/menu_pressed.png" id="6_n2pog"]
[ext_resource type="Texture2D" uid="uid://jm7trfocx68y" path="res://sprites/hammer.png" id="7_tku74"]
[ext_resource type="Texture2D" uid="uid://d1rljudcdbq8b" path="res://sprites/hammer_pressed.png" id="8_v0i44"]
[ext_resource type="PackedScene" uid="uid://cbev4thk0ftt" path="res://scenes/objects/mirrors/mirror_generator.tscn" id="9_ubqgb"]
[ext_resource type="Texture2D" uid="uid://dfhlbl5detttk" path="res://sprites/cannon_base.png" id="11_sqxmt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kq8r4"]
texture = ExtResource("3_bt0cm")
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xbp5a"]
sources/1 = SubResource("TileSetAtlasSource_kq8r4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7kojg"]
texture = ExtResource("2_aa7qc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_03ej3"]
texture = ExtResource("4_4sq44")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_a1whd"]
sources/0 = SubResource("TileSetAtlasSource_7kojg")
sources/2 = SubResource("TileSetAtlasSource_03ej3")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u22b0"]
texture = ExtResource("11_sqxmt")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_apt13"]
sources/0 = SubResource("TileSetAtlasSource_u22b0")

[node name="Level" type="Node2D"]
script = ExtResource("1_rid8s")

[node name="CollisionBlocks" parent="." instance=ExtResource("2_ppuw4")]
tile_map_data = PackedByteArray("AAD6/wMAAAABAAUAAAACAAMAAAABAAUAAAADAAMAAAABAAUAAAAEAAMAAAABAAUAAAAFAAIAAAABAAUAAAD6/wIAAAABAAUAAAD6//z/AAABAAUAAAD6//3/AAABAAUAAAD6//7/AAABAAUAAAD6////AAABAAUAAAD6/wAAAAABAAUAAAD6/wEAAAABAAUAAAD7//z/AAABAAUAAAD7//3/AAAAAAAAAAD8//z/AAABAAUAAAD8//3/AAABAAAAAAD9//z/AAABAAUAAAD9//3/AAABAAAAAAD+//z/AAABAAUAAAD+//3/AAABAAAAAAD///z/AAABAAUAAAD///3/AAABAAAAAAAAAPz/AAABAAUAAAAAAP3/AAABAAAAAAABAPz/AAABAAUAAAABAP3/AAABAAAAAAACAPz/AAABAAUAAAACAP3/AAACAAAAAAAFAAMAAAABAAUAAAACAAIAAAACAAIAAAADAAIAAAABAAIAAAAEAAIAAAACAAIAAAADAPz/AAABAAUAAAADAP3/AAABAAAAAAAEAPz/AAABAAUAAAAFAPz/AAABAAUAAAAFAP3/AAABAAUAAAD7/wIAAAAAAAIAAAD8/wIAAAABAAIAAAD9/wIAAAABAAIAAAD+/wIAAAABAAIAAAD//wIAAAABAAIAAAAAAAIAAAABAAIAAAABAAIAAAABAAIAAAD7/wMAAAABAAUAAAD8/wMAAAABAAUAAAD9/wMAAAABAAUAAAD+/wMAAAABAAUAAAD//wMAAAABAAUAAAAAAAMAAAABAAUAAAABAAMAAAABAAUAAAAFAAEAAAABAAUAAAAFAAAAAAABAAUAAAAFAP//AAABAAUAAAAFAP7/AAABAAUAAAACAP7/AAACAAEAAAACAP//AAACAAEAAAACAAAAAAACAAEAAAACAAEAAAACAAEAAAAEAP3/AAACAAAAAAD7/wEAAAAAAAEAAAD7/wAAAAAAAAEAAAD7////AAAAAAEAAAD7//7/AAAAAAEAAAAEAAEAAAACAAEAAAAEAAAAAAACAAEAAAAEAP//AAACAAEAAAAEAP7/AAACAAEAAAA=")
metadata/_edit_lock_ = true

[node name="BuildModeBG" type="TileMapLayer" parent="."]
visible = false
z_index = -1
tile_map_data = PackedByteArray("AAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD6////AQAAAAAAAAD6/wAAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wIAAQAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQAAAAAAAAD7////AQAAAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAAAAAD8////AQAAAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD+//3/AQAAAAAAAAD+//7/AQAAAAAAAAD+////AQAAAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_xbp5a")
metadata/_edit_lock_ = true

[node name="BG" type="TileMapLayer" parent="."]
z_index = -10
tile_map_data = PackedByteArray("AAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAAEAP3/AAADAAAAAAAEAP7/AAADAAAAAAAEAP//AAADAAAAAAAEAAAAAAADAAAAAAAEAAEAAAADAAAAAAAEAAIAAAADAAAAAAADAAIAAAADAAAAAAADAAEAAAADAAAAAAADAAAAAAADAAAAAAADAP//AAADAAAAAAADAP7/AAADAAAAAAADAP3/AAADAAAAAAD6/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD6////AAAAAAAAAAD6//7/AAAAAAAAAAD6//3/AAAAAAAAAAAFAAAAAAADAAAAAAAFAP//AAADAAAAAAAFAP7/AAADAAAAAAAFAP3/AAADAAAAAAAFAAEAAAADAAAAAAAFAAIAAAADAAAAAAA=")
tile_set = SubResource("TileSet_a1whd")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 10
zoom = Vector2(3.75, 3.75)
metadata/_edit_lock_ = true

[node name="MenuButton" type="TextureButton" parent="."]
z_index = 10
anchors_preset = -1
anchor_right = 0.012
anchor_bottom = 0.022
offset_left = 64.0
offset_top = -44.0
offset_right = 76.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_e0la5")
texture_pressed = ExtResource("6_n2pog")
texture_hover = ExtResource("6_n2pog")
ignore_texture_size = true
stretch_mode = 0

[node name="BuildModeButton" type="TextureButton" parent="."]
offset_left = 50.0
offset_top = -44.0
offset_right = 62.0
offset_bottom = -32.0
texture_normal = ExtResource("7_tku74")
texture_pressed = ExtResource("8_v0i44")
texture_hover = ExtResource("8_v0i44")
ignore_texture_size = true
stretch_mode = 0

[node name="MirrorGenerator" parent="." instance=ExtResource("9_ubqgb")]
z_index = -2
position = Vector2(64, 20)
metadata/_edit_lock_ = true

[node name="MirrorBlock" type="ColorRect" parent="."]
offset_left = 48.0
offset_top = 6.0
offset_right = 80.0
offset_bottom = 48.0
color = Color(0.498039, 0.498039, 0.498039, 1)
metadata/_edit_lock_ = true

[node name="Goals" type="Node" parent="."]

[node name="Mirrors" type="Node" parent="."]

[node name="LevelNumber" type="Label" parent="."]
offset_left = -78.0
offset_top = -46.0
offset_right = -56.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)

[node name="PlaceableArea" type="TileMapLayer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
tile_map_data = PackedByteArray("AAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_apt13")

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="BuildModeButton" to="." method="_on_build_mode_button_pressed"]
